--- a/PsicoOnline.UI/Pages/Pacientes.razor
+++ b/PsicoOnline.UI/Pages/Pacientes.razor
@@ -32,7 +32,7 @@ else
             <MudTd DataLabel="Idade">@context.GetIdade() ano(s)</MudTd>
             <MudTd DataLabel="Telefone">@context.Telefone</MudTd>
             <MudTd DataLabel="Editar">
-                <MudIconButton Variant="Variant.Outlined" Color="Color.Primary" Size="Size.Small" Icon="@Icons.Material.Rounded.Edit" Title="Editar" OnClick="(() => EditarPaciente(context.Id))" />
+                <MudIconButton Variant="Variant.Outlined" Color="Color.Primary" Size="Size.Small" Icon="@Icons.Material.Rounded.Edit" title="Editar" OnClick="(() => EditarPaciente(context.Id))" />
             </MudTd>
         </RowTemplate>
         <PagerContent>
