--- a/PsicoOnline.UI/Pages/Responsaveis.razor
+++ b/PsicoOnline.UI/Pages/Responsaveis.razor
@@ -36,7 +36,7 @@ else
             </MudTd>
             <MudTd DataLabel="parentescco">@context.GrauParentesco.Descricao</MudTd>
             <MudTd DataLabel="Editar">
-                <MudIconButton Variant="Variant.Outlined" Color="Color.Primary" Size="Size.Small" Icon="@Icons.Material.Rounded.Edit" Title="Editar" OnClick="(() => EditarResponsavel(context.Id))" />
+                <MudIconButton Variant="Variant.Outlined" Color="Color.Primary" Size="Size.Small" Icon="@Icons.Material.Rounded.Edit" title="Editar" OnClick="(() => EditarResponsavel(context.Id))" />
             </MudTd>
         </RowTemplate>
         <PagerContent>
