Ajusta evento change do MudSwitch

--- a/PsicoOnline.UI/Shared/MainLayout.razor
+++ b/PsicoOnline.UI/Shared/MainLayout.razor
@@ -10,7 +10,7 @@
 		<MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => AlternarGaveta())" />
 		<MudText Typo="Typo.h5" Class="ml-3">PsicoOnline</MudText>
 		<MudSpacer />
-		<MudSwitch T="bool" Color="Color.Primary" checkedchanged="AlternarModoEscuro" ThumbIcon="@iconeAtual" />
+		<MudSwitch T="bool" Color="Color.Primary" ValueChanged="AlternarModoEscuro" ThumbIcon="@iconeAtual" />
 	</MudAppBar>
 	<MudDrawer @bind-Open="gavetaAberta" ClipMode="DrawerClipMode.Always" Elevation="2">
 		<NavMenu />
