--- a/src/PsicoOnline.UI/Components/GeneroRadioComponent.razor
+++ b/src/PsicoOnline.UI/Components/GeneroRadioComponent.razor
@@ -2,3 +2,11 @@
 {
     <MudRadio Value="genero.Id" Color="Color.Primary" Dense="true" Size="Size.Small">@genero.Descricao</MudRadio>
 }
+
+@code {
+    static readonly List<GeneroModel> generos = new()
+    {
+        new GeneroModel{ Id = 'M', Descricao = "Masculino" },
+        new GeneroModel{ Id = 'F', Descricao = "Feminino" }
+    };
+}
