--- a/src/PsicoOnline.UI/Pages/GrausParentesco.razor
+++ b/src/PsicoOnline.UI/Pages/GrausParentesco.razor
@@ -30,7 +30,7 @@ else
             </MudTd>
         </RowTemplate>
         <PagerContent>
-            <MudTablePager HorizontalAlignment="HorizontalAlignment.Left" RowsPerPageString="Linhas por página:" PageSizeOptions="pageSizes" />
+            <MudTablePager HorizontalAlignment="HorizontalAlignment.Left" RowsPerPageString="Registros por página:" PageSizeOptions="pageSizes" />
         </PagerContent>
     </MudTable>
     <br />
