--- a/src/PsicoOnline.UI/_Imports.razor
+++ b/src/PsicoOnline.UI/_Imports.razor
@@ -8,6 +8,7 @@
 @using PsicoOnline.UI
 @using PsicoOnline.UI.Components
 @using PsicoOnline.UI.Services
+@using PsicoOnline.UI.Services.Interfaces
 @using PsicoOnline.UI.Shared
 @using System.Net.Http
 @using System.Net.Http.Json
